# TamarinTrack

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.dvc/: config
config/: main.yaml
config/taxonCLIP/: taxon_clip_base.yaml
config/taxonCLIP/model/: distilbert-convnext-small.yaml
config/taxonCLIP/training/: adam_cosine.yaml
data/: .gitignore  DetectionDatasets.dvc
tamarintrack/: config.py  tokenizer.py  train_taxon_clip.py
tamarintrack/datamodules/: factory.py  taxonDataModule.py  taxonDataset.py
tamarintrack/taxonCLIP/: loss.py  metrics.py  taxonCLIP.py  textTower.py  utils.py  visionTower.py
tests/: test_train_model.py
